--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify Imersão</title>
 
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./src/styles/reset.css" />
+    <link rel="stylesheet" href="./src/styles/vars.css" />
+    <link rel="stylesheet" href="./src/styles/main-content.css" />
+    <link rel="stylesheet" href="./src/styles/sidebar-footer.css" />
 
     <!-- Links para trazer os ícones via CDN -->
     <link
@@ -23,7 +25,7 @@
       <nav class="sidebar__navigation">
         <div class="logo">
           <a href="">
-            <img src="./assets/icons/logo-spotify.png" alt="Logo Spotify"
+            <img src="./src/assets/icons/logo-spotify.png" alt="Logo Spotify"
           /></a>
         </div>
         <ul>
@@ -53,7 +55,9 @@
           <div class="section-playlist__content">
             <span class="text title">Crie sua primeira playlist</span>
             <span class="text subtitle">É fácil, vamos te ajudar.</span>
-            <button class="section-playlist__button">Criar playlist</button>
+            <button class="section-playlist__button">
+              <span>Criar playlist</span>
+            </button>
           </div>
         </section>
         <div class="cookies">
@@ -67,5 +71,50 @@
         </div>
       </div>
     </div>
+    <main>
+      <div class="main-container">
+        <nav class="header__navigation">
+          <div class="navigation">
+            <button class="arrow-left">
+              <img
+                src="./src/assets/icons/small-left.png"
+                alt="Seta esquerda"
+              />
+            </button>
+            <button class="arrow-right">
+              <img
+                src="./src/assets/icons/small-right.png"
+                alt="Seta direita"
+              />
+            </button>
+          </div>
+          <div class="header__search">
+            <img src="./src/assets/icons/search.png" alt="" />
+            <input
+              id="search-input"
+              type="text"
+              maxlength="800"
+              placeholder="O que você quer ouvir?"
+            />
+          </div>
+          <div class="header__login">
+            <button class="subscribe">Inscreva-se</button>
+            <button class="login">Entrar</button>
+          </div>
+        </nav>
+      </div>
+    </main>
+    <footer class="disclaimer-premium">
+      <div class="text">
+        <p class="disclaimer-premium__title">Testar o Premium de graça</p>
+        <p class="disclaimer-premium__subtitle">
+          Inscreva-se para curtir música ilimitada e podcasts só com alguns
+          anúncios. Não precisa de cartão de crédito.
+        </p>
+      </div>
+      <div class="disclaimer-premium__button">
+        <button type="button">Inscreva-se grátis</button>
+      </div>
+    </footer>
   </body>
 </html>
