Adicional da parte de playlists dentro da main

--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
             <button class="login">Entrar</button>
           </div>
         </nav>
+        <div class="main-content">
+          <div class="main-content__textos">
+            <h2>Boa tarde</h2>
+            <p>Navegar por todas as seções</p>
+          </div>
+        </div>
       </div>
     </main>
     <footer class="disclaimer-premium">
