Ajustes na parte de playlists - html e css

--- a/index.html
+++ b/index.html
@@ -102,10 +102,14 @@
             <button class="login">Entrar</button>
           </div>
         </nav>
-        <div class="main-content">
-          <div class="main-content__textos">
-            <h2>Boa tarde</h2>
-            <p>Navegar por todas as seções</p>
+        <div class="playlist-container">
+          <div id="result-playlists">
+            <div class="playlist">
+              <h1 id="greeting">Boas vindas</h1>
+              <h2 class="greeting-subtitle">Navegar por todas as seções</h2>
+            </div>
+
+            <!-- LISTA DE CARDS-->
           </div>
         </div>
       </div>
